--- a/grails-app/assets/stylesheets/main.css
+++ b/grails-app/assets/stylesheets/main.css
@@ -73,8 +73,9 @@ a:hover, a:active {
 }
 
 h1 {
-	color: #48802c;
-	font-weight: normal;
+	color: red;
+	font-style: italic;
+	font-weight: bold;
 	font-size: 1.25em;
 	margin: 0.8em 0 0.3em 0;
 }
